--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="文杰 : 一枚前端">
-
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>文杰</title>
+    <title>文杰的前端页面</title>
   </head>
 
   <body>
@@ -18,7 +15,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/wangwenjie1314/Blog">View on GitHub</a>
 
-          <h1 id="project_title">文杰</h1>
+          <h1 id="project_title">文杰是</h1>
           <h2 id="project_tagline">一枚前端</h2>
 
             <section id="downloads">
