--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-  <meta charset="UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="renderer" content="webkit">
   <title>快递查询by wwj</title>
-  <link rel="stylesheet" href="stylesheets/common.css?v=1411887282" type="text/css" />
-  <link rel="stylesheet" href="stylesheets/index.css?v=1411887282" type="text/css" />
+  <link rel="stylesheet" href="stylesheets/common.css?v=141016" type="text/css" />
+  <link rel="stylesheet" href="stylesheets/index.css?v=141016" type="text/css" />
 </head>
 <body>
 <div class="w-sec" id="w-sec">
-  <div class="w-warp comWidth clearfix" id="w-warp">
+  <div class="w-wrap comWidth clearfix" id="w-warp">
     <h1 class="w-title clearfix">快递查询</h1>
     <p class="tac"><label>快递名称：<input class="w-input" type="text" name="kdTName" id="kdTName" value="韵达快递" placeholder="选择快递名称" /><input type="hidden" name="kdName" id="kdName" value="yunda" /></label></p>
     <p class="tac"><label>快递单号：<input class="w-input" type="text" name="kdNum" id="kdNum" value="1500066330925" placeholder="填写快递单号"/></label></p>
@@ -20,9 +22,9 @@
   </div>
 </div>
 <!-- mask-->
-<div class="w-mask" id="w-mask"></div>
-<div class="w-mask-body" id="w-mask-body">
-  <div class="w-mask-box comWidth clearfix">
+<div class="mask-wrap dn" id="mask-wrap">
+<div class="mask-body hide" id="mask-body">
+  <div class="mask-box">
     <div class="column-1 column-list">
         <dl class="dl-bg">
           <dt>A</dt>
@@ -161,7 +163,7 @@
           <a href="javascript:;" flag="lijisong">立即送</a></dd>
           <dd><a href="javascript:;" flag="lanhukuaidi">蓝弧快递</a></dd>
         </dl>
-      </div>
+    </div>
     <div class="column-2 column-list">
         <dl class="dl-bg">
           <dt>M</dt>
@@ -298,16 +300,18 @@
           <dd><a href="javascript:;" flag="zhongwaiyun">中外运速递</a>
           <a href="javascript:;" flag="zengyisudi">增益速递</a> </dd>
         </dl>
-      </div>
+    </div>
   </div>
-  <a href="javascript:;" class="w-mask-close" id="w-mask-close">X</a>
+  <a href="javascript:;" class="mask-close" id="mask-close" title="关闭">X</a>
+</div>
+<div class="mask-bg hide" id="mask-bg"></div>
 </div>
 <!-- mask end-->
 <!--gotop -->
 <div id="tipback" class="btn_top" title="返回顶部"><a class="icon_top_n" href="javascript:;"></a></div>
 <!--gotop end -->
-<script type="text/javascript" src="javascripts/sea.js"></script>
-<script type="text/javascript" src="javascripts/sea_config.js"></script>
+<script type="text/javascript" src="js/sea.js"></script>
+<script type="text/javascript" src="js/sea_config.js"></script>
 <script type="text/javascript">seajs.use("index_mask")</script>
 </body>
 </html>
