--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
 <!--gotop -->
 <div id="tipback" class="btn_top" title="返回顶部"><a class="icon_top_n" href="javascript:;"></a></div>
 <!--gotop end -->
-<script type="text/javascript" src="js/sea.js"></script>
-<script type="text/javascript" src="js/sea_config.js"></script>
+<script type="text/javascript" src="javascripts/sea.js"></script>
+<script type="text/javascript" src="javascripts/sea_config.js"></script>
 <script type="text/javascript">seajs.use("index_mask")</script>
 </body>
 </html>
