--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="renderer" content="webkit">
   <title>快递查询by wwj</title>
-  <link rel="stylesheet" href="http://wangwenjie1314.github.io/Blog/stylesheets/??common.css,index.css?v=141016" type="text/css" />
-  <!-- <link rel="stylesheet" href="stylesheets/common.css?v=141016" type="text/css" />
-  <link rel="stylesheet" href="stylesheets/index.css?v=141016" type="text/css" /> -->
+  <link rel="stylesheet" href="stylesheets/common.css?v=141016" type="text/css" />
+  <link rel="stylesheet" href="stylesheets/index.css?v=141016" type="text/css" />
 </head>
 <body>
 <div class="w-sec" id="w-sec">
