--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1 class="w-title clearfix">快递查询</h1>
     <p class="tac"><label>快递名称：<input class="w-input" type="text" name="kdTName" id="kdTName" value="韵达快递" placeholder="选择快递名称" /><input type="hidden" name="kdName" id="kdName" value="yunda" /></label></p>
     <p class="tac"><label>快递单号：<input class="w-input" type="text" name="kdNum" id="kdNum" value="1500066330925" placeholder="填写快递单号"/></label></p>
-    <p class="tac"><a class="btn-query btn-query-m" name="kdSubBtn" id="kdSubBtn">查询</a></p>
+    <p class="tac"><a class="btn-query btn-query-m" name="kdSubBtn" id="kdSubBtn">查询</a><a href="company.html" target="_blank" style="margin-left:10px">快递公司</a></p>
     <div id="queryContext" class="result-con">
       <div class="result-top"><span class="col1">时间</span><span class="col2">地点和跟踪进度</span></div>
         <table id="queryResult" class="result-info" cellspacing="0"></table>
@@ -307,9 +307,6 @@
 <div class="mask-bg hide" id="mask-bg"></div>
 </div>
 <!-- mask end-->
-<!--gotop -->
-<div id="tipback" class="btn_top" title="返回顶部"><a class="icon_top_n" href="javascript:;"></a></div>
-<!--gotop end -->
 <script type="text/javascript" src="javascripts/sea.js"></script>
 <script type="text/javascript" src="javascripts/sea_config.js"></script>
 <script type="text/javascript">seajs.use("index_mask")</script>
