--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="renderer" content="webkit">
   <meta content="width=320,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport" />
   <title>前端风景</title>
-  <meta name="author" content="welefen" />
+  <meta name="author" content="wangwenjie" />
   <link rel="shortcut icon" href="http://cdn-img.easyicon.net/favicon.ico" />
   <link rel="stylesheet" href="stylesheets/index.css" />
   <link rel="stylesheet" href="stylesheets/font-zui.css" />
@@ -20,9 +20,9 @@
       <nav role="navigation"> 
        <ul role="main-navigation"> 
         <li><a class="current" href="/">文章</a></li>
-        <li><a href="#">前端知识</a></li>
-        <li><a href="#">前端面试</a></li>
-        <li><a href="#">关于</a></li>
+        <li><a href="views/weblearn/index.html" target="_blank">前端知识</a></li>
+        <li><a href="https://github.com/wangwenjie1314/webQd/blob/master/README.md" target="_blank">前端面试</a></li>
+        <li><a href="views/about/me.html" target="_blank">关于我</a></li>
        </ul>
       </nav> 
       <div class="search"></div>
