--- a/index.html
+++ b/index.html
@@ -77,5 +77,9 @@
     </div>
    </div> 
   </footer>
+  <script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fbdbe9aff5b201deaa68b41ff4b5dcf43' type='text/javascript'%3E%3C/script%3E"));
+</script>
  </body>
 </html>
