--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li><a href="views/kuaidi/index.html" target="_blank">[便民] 快递单号查询</a> <time>2014-10-16</time> </li>
         <li><a href="views/kuaidi/company.html" target="_blank">[便民] 快递公司查询</a> <time>2014-10-16</time> </li>
         <li><a href="views/404/index.html" target="_blank">[模版] 404页面</a> <time>2014-10-16</time> </li>
-        <li><a href="views/auto_layout/index.html" target="_blank">[模版] 瀑布流布局页面</a> <time>2014-10-16</time> </li>
+        <li><a href="views/auto_layout/index.html" target="_blank">[模版] 瀑布流布局页面 <i class="icon-heart"></i></a> <time>2014-10-16</time> </li>
         <li><a href="views/chart/index.html" target="_blank">[模版] 聊天窗口页面</a> <time>2014-10-16</time> </li>
         <li><a href="views/login_reg/reg.html" target="_blank">[模版] 用户注册页面</a> <time>2014-10-16</time> </li>
         <li><a href="views/login_reg/login.html" target="_blank">[模版] 用户登录页面</a> <time>2014-10-16</time> </li>
@@ -77,9 +77,9 @@
     </div>
    </div> 
   </footer>
-  <script type="text/javascript">
+  <div class="dn"><script type="text/javascript">
 var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fbdbe9aff5b201deaa68b41ff4b5dcf43' type='text/javascript'%3E%3C/script%3E"));
-</script>
+</script></div>
  </body>
 </html>
