--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
      <div class="contents"> 
       <div class="index"> 
        <ul class="article-list"> 
+        <li><a href="views/mowo/index.html" target="_blank">[作品] mowo365</a> <time>2014-10-17</time> </li>
         <li><a href="views/kuaidi/index.html" target="_blank">[便民] 快递单号查询</a> <time>2014-10-16</time> </li>
         <li><a href="views/kuaidi/company.html" target="_blank">[便民] 快递公司查询</a> <time>2014-10-16</time> </li>
         <li><a href="views/404/index.html" target="_blank">[模版] 404页面</a> <time>2014-10-16</time> </li>
