--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <header class="header"> 
    <div class="navigation container_12"> 
     <div class="row"> 
-     <section class="grid_2 logo"><a href="/">前端风景</a></section> 
+     <section class="grid_2 logo"><a href="http://wangwenjie1314.github.io/blog/">前端风景</a></section> 
      <div class="grid_8"> 
       <nav role="navigation"> 
        <ul role="main-navigation"> 
-        <li><a class="current" href="/">文章</a></li>
+        <li><a class="current" href="http://wangwenjie1314.github.io/blog/">文章</a></li>
         <li><a href="views/weblearn/index.html" target="_blank">前端知识</a></li>
         <li><a href="https://github.com/wangwenjie1314/webQd/blob/master/README.md" target="_blank">前端面试</a></li>
         <li><a href="views/about/me.html" target="_blank">关于我</a></li>
