update tool page
更新工具页面细节

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <nav role="navigation"> 
        <ul role="main-navigation"> 
         <li><a class="current" href="http://wangwenjie1314.github.io/blog/">文章</a></li>
+        <li><a href="http://wangwenjie1314.github.io/blog/views/tool/index.htm"><i class="icon-stack"></i> 前端工具箱</a></li>
         <li><a href="views/weblearn/index.html" target="_blank">前端知识</a></li>
         <li><a href="https://github.com/wangwenjie1314/webQd/blob/master/README.md" target="_blank">前端面试</a></li>
         <li><a href="views/about/me.html" target="_blank">关于我</a></li>
