--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
         <li><a href="views/table/data_table.html" target="_blank">[模版] 数据表格页面</a> <time>2014-10-16</time> </li>
         <li><a href="views/timeline/index.html" target="_blank">[模版] 时间轴页面</a> <time>2014-10-16</time> </li>
         <li><a href="views/dialog/index.html" target="_blank">[模版] 弹窗dialog页面</a> <time>2014-10-16</time> </li>
-		<li><a href="views/hao/index.html" target="_blank">[作品] 仿qq导航简洁版页面</a> <time>2014-07-10</time> </li>
+        <li><a href="views/netcar/index.html" target="_blank">[练习] 巢车网页面</a> <time>2014-08-10</time> </li>
+		<li><a href="views/hao/index.html" target="_blank">[练习] 仿qq导航简洁版页面</a> <time>2014-07-10</time> </li>
+		<li><a href="views/ouzhouke/index.html" target="_blank">[练习] 欧洲客页面</a> <time>2014-04-20</time> </li>
         <li><a href="views/business/index.html" target="_blank">[模板] 企业公司展示页面</a> <time>2014-04-12</time> </li>
        </ul>
       </div> 
@@ -77,7 +79,7 @@
     <div class="row"> 
      <div class="grid_5 left"></div> 
      <div class="copyright grid_5 right"> 
-      <span> Powered by <a target="_blank" href="https://github.com/wangwenjie1314">github</a> &copy; 2014 </span>
+      <span> Powered by welefen and <a target="_blank" href="https://github.com/wangwenjie1314">github</a> &copy; 2014 </span>
      </div>
     </div>
    </div> 
