--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
   <footer class="footer" role="contentinfo"> 
    <div class="footer-content container_12"> 
     <div class="row"> 
-     <div class="grid_5 left"></div> 
-     <div class="copyright grid_5 right"> 
+     <div class="grid_6 left">
+     	<span>特别说明:本站所有资源仅供学习与参考,请勿用于商业用途。转载请注明来自https://github.com/wangwenjie1314</span>
+     </div> 
+     <div class="copyright grid_6 right"> 
       <span> Powered by welefen and <a target="_blank" href="https://github.com/wangwenjie1314">github</a> &copy; 2014 </span>
      </div>
     </div>
