--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
      <div class="contents"> 
       <div class="index"> 
        <ul class="article-list"> 
+        <li><a href="views/subway/index.htm" target="_blank">[移植] 北京地铁输入始末站查成本</a> <time>2014-10-20</time> </li>
+        <li><a href="views/job/index.html" target="_blank">[行业] 拉钩网分析互联网职位报告</a> <time>2014-10-20</time> </li>
         <li><a href="views/highlight/index.html" target="_blank">[学习] 代码高亮highlight</a> <time>2014-10-20</time> </li>
         <li><a href="views/echarts/line2.html" target="_blank">[学习] 图表echarts</a> <time>2014-10-20</time> </li>
         <li><a href="views/mowo/index.html" target="_blank">[练习] mowo365</a> <time>2014-10-17</time> </li>
